--- a/con4/public/stylesheets/rules.css
+++ b/con4/public/stylesheets/rules.css
@@ -4,13 +4,18 @@
 
 h1 {
     text-align: center;
-    font-size: 400%;
+    font-size: 450%;
 }
 
 #RulesList {
+    position: absolute;
+    left: 35%;
     text-align: center;
     font-size: 150%;
+    color: white;
     font-weight: bold;
-    /*line-height: 200%;*/
+    background-color: var(--TUDBlue);
+    padding: 13px 50px;
+    border-radius: 50px;
 }
 
