--- a/con4/views/splash.ejs
+++ b/con4/views/splash.ejs
@@ -3,15 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Game</title>
+        <link rel='stylesheet' href='/stylesheets/splash.css' />
     </head>
     <body>
-        <h1>Connect 4</h1>
-        <form action="/play" method="get">
-            <button type="submit">PLAY</button>
-        </form>
-        <form action="/rules" method="get">
-            <button type="submit">RULES</button>
-        </form>
+        <h1>CONNECT FOUR</h1>
+        <div class = "buttons">
+            <form action="/play" method="get">
+                <button type="submit">PLAY</button>
+            </form>
+            <br>
+            <form action="/rules" method="get">
+                <button type="submit">RULES</button>
+            </form>
+        </div>
 
 
         <div id="stats">
