--- a/con4/public/stylesheets/rules.css
+++ b/con4/public/stylesheets/rules.css
@@ -9,7 +9,7 @@ h1 {
 
 #RulesList {
     position: absolute;
-    left: 35%;
+    left: calc(50% - 450px);
     text-align: center;
     font-size: 150%;
     color: white;
@@ -17,5 +17,6 @@ h1 {
     background-color: var(--TUDBlue);
     padding: 13px 50px;
     border-radius: 50px;
+    width: 800px;
 }
 
