--- a/con4/public/stylesheets/splash.css
+++ b/con4/public/stylesheets/splash.css
@@ -1,6 +1,7 @@
 @import "style.css";
 
 h1 {
+    margin-top: 3.5%;
     font-size: 400%;
     text-align: center;
   }
@@ -9,7 +10,7 @@ h1 {
     text-align: center;
     position: absolute;
     top: 40%;
-    left: 45%;
+    left: calc(50% - 200px);
 }
 
 button {
@@ -23,15 +24,32 @@ button {
     border-width: 2px;
     border-radius: 15px;
     border-color: black;
+    width: 400px;
 }
 
-#stats {
-    text-align: center;
-    position: absolute;
-    top: 85%;
-    left: 45%
+button:hover {
+    cursor: pointer;
+    animation-name: flashing;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes flashing {
+    0% {background-color: var(--TUDBlue);}
+    50% {background-color: #047dab;}
+    100% {background-color: var(--TUDBlue);}
 }
 
 #stats p {
-    font-size: 175%;
+    font-size: 200%;
+}
+
+#stats {
+    display: grid;
+    grid-template-rows: 100px;
+    grid-template-columns: repeat(3, 33%);
+    position: absolute;
+    bottom: 10px;
+    width: 99%;
+    text-align: center;
 }
